--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -5,7 +5,7 @@
 		flex: 1 1 auto;
 	}
     #primaryNav li a {
-        color: green;
+        /* color: green; */
         border-right: 1px solid rgba(0,0,0,0.3);
         justify-content: flex-end;
     }
